Add provisioning inventories and operation foundation
